# hyprshutdown

./: CMakeLists.txt  flake.nix
nix/: default.nix  overlays.nix
src/: main.cpp
src/helpers/: Asserts.hpp
src/state/: AppState.cpp  AppState.hpp
src/ui/: UI.cpp  UI.hpp
